--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <h1>Gmail Email Contact Scraper</h1>
-    <button id="scrapeButton" class="button">Scrape Emails</button>
+    <button id="scrapeButton" class="button scrape-button">Scrape Emails</button>
 
 
     <button id="exportButton" class="button" style="display:none;">Export to CSV</button>
